--- a/README
+++ b/README
@@ -2,8 +2,5 @@ README for pathFinder application
 
 This is an ODE based simulation to create a path following vehicle
 
-Original screen management is done through the drawstuff interface.
-
 Project is run by 
-
-John Gray Cole and John G Cole
+John Grady Pace Cole and John Grady Cole
